--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             googlefont: "Saira+Condensed:wght@100",
             fontratio: "0.4",
             radioname: "La Radio Que Activa Tu Corazón",
-            scroll: "true",
+            scroll: "false",
             coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
             onlycoverimage: "false",
             coverstyle: "animated",
