--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="theme-color" content="#08298a">
-    <title> Radio GenAp</title>
+    <title>Radio GenAp</title>
 
     <!-- Añadir el favicon -->
     <link rel="icon" href="https://i.ibb.co/T414C4v/Logo-Gen-Ap.png" type="image/x-icon">
@@ -23,111 +23,273 @@
             color: #272829;
         }
 
-      /* Estilos para la imagen del cover */
-#player .cover-image {
-    width: 150px; /* Cambia el tamaño según lo desees */
-    height: 150px; /* Cambia el tamaño según lo desees */
-    box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3); /* Sombra reducida */
-}
+        /* Estilos para la imagen del cover */
+        #player .cover-image {
+            width: 150px; /* Cambia el tamaño según lo desees */
+            height: 150px; /* Cambia el tamaño según lo desees */
+            box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3); /* Sombra reducida */
+        }
+
+        a {
+            text-decoration: none;
+            color: rgba(255, 255, 255, 1);
+        }
+
+        a:hover {
+            color: rgba(255, 255, 255, 1);
+            text-decoration: none;
+        }
+
+        h1 {
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+            font-family: 'Open Sans Condensed', sans-serif;
+        }
+
+        #header {
+            position: fixed;
+            top: 0;
+            right: 0; /* Cambiado para que se posicione a la derecha */
+            z-index: 100;
+            transition: all .5s;
+            overflow-y: auto;
+            background: rgba(255, 255, 255, 0);
+            padding: 20px 20px 0px;
+        }
+
+        .nav-menu * {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+        .nav-menu > ul > li {
+            position: relative;
+            white-space: nowrap;
+        }
+
+        .nav-menu a {
+            display: flex;
+            align-items: center;
+            color: red;
+            padding-left: 18px;
+            margin-bottom: 8px;
+            transition: .3s;
+            font-size: 15px;
+            border-radius: 50px;
+            background: #f2f3f5;
+            height: 46px;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .nav-menu a i {
+            font-size: 16px;
+            /* Se eliminó la sombra del ícono */
+        }
+
+        .nav-menu a span {
+            padding: 0 5px 0 7px;
+            color: black;
+        }
+
+        .nav-menu li:hover > a {
+            color: blue;
+            background: #00cc45;
+        }
+
+        .nav-menu li:hover > a span {
+            color: #fff;
+        }
+
+        .mobile-nav-toggle {
+            position: fixed;
+            right: 15px;
+            top: 15px;
+            z-index: 99;
+            border: 0;
+            background: none;
+            font-size: 24px;
+            transition: all .4s;
+            outline: none !important;
+            line-height: 1;
+            cursor: pointer;
+            text-align: right;
+        }
+
+        .mobile-nav-toggle i {
+            color: #fff;
+        }
+
+        .mobile-nav-active {
+            overflow: hidden;
+        }
+
+        .mobile-nav-active #header {
+            right: 0; /* Cambiado para que se mantenga a la derecha */
+        }
+
+        .mobile-nav-active .mobile-nav-toggle i {
+            color: #fff;
+        }
+
+        #player {
+            margin: 0px auto;
+            width: 100%;
+            height: 100%;
+        }
+
+        .background_hora {
+            width: 196px;
+            height: 46px;
+            background-color: #fff;
+            position: absolute;
+            left: 20px; /* Cambiado para que se posicione a la izquierda */
+            bottom: 100px;
+            border-radius: 50px;
+        }
+
+        #relogio {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-right: -50%;
+            transform: translate(-50%, -50%);
+            font-size: 30px;
+            font-family: "Poppins", sans-serif;
+            color: red;
+        }
+
+        .back-to-top {
+            position: fixed;
+            display: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 50px;
+            right: 15px;
+            bottom: 15px;
+            background: #3a0d5c;
+            color: #fff;
+            transition: display .5s ease-in-out;
+            z-index: 99999;
+        }
+
+        .back-to-top i {
+            font-size: 24px;
+            position: absolute;
+            top: 7px;
+            left: 8px;
+        }
+
+        .back-to-top:hover {
+            color: #fff;
+            background: #0678e3;
+            transition: background .2s ease-in-out;
+        }
+
+        @media (min-width: 992px) {
+            .mobile-nav-toggle {
+                display: none;
+            }
+        }
+
+        @media (max-width: 991px) {
+            #header {
+                width: auto;
+                background: #fff;
+                border-left: 1px solid #e6e9ec; /* Cambiado de right a left */
+                right: -300px; /* Cambiado para que esté fuera de la pantalla */
+                padding: 20px 30px 100vh 10px;
+            }
+        }
+
+        @media only screen and (max-width: 768px) {
+            #player {
+                width: 100%;
+                height: 100%;
+            }
+            .background_hora {
+                display: none;
+            }
+            #relogio {
+                display: none;
+            }
+        }
     </style>
 </head>
 
 <body>
-<div style="height:100%">
-    <button type="button" class="mobile-nav-toggle"><i class="fas fa-bars"></i></button>
-    <header id="header">
-        <nav class="nav-menu">
-            <ul>
-                <li><a target="_blank" href=" https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
-                
-                    </a>
-                </li>
-                <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square" alt="Facebook"></i><span>Facebook</span></a></li>
-                <li>
-                    <a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank">
-                        <i class="fab fa-whatsapp-square" alt="Whatsapp"></i>
-                        <span>Whatsapp</span>
-                    </a>
-                <li>
-                    <a target="_blank" href="https://www.youtube.com/@luisbuenotv">
-                        <i class="fab fa-youtube"></i>
-                        <span>YouTube</span>
-                    </a>
-                </li>
-                <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
-                <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
+    <div style="height:100%">
+        <button type="button" class="mobile-nav-toggle"><i class="fas fa-bars"></i></button>
+        <header id="header">
+            <nav class="nav-menu">
+                <ul>
+                    <li><a target="_blank" href="https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square" alt="Facebook"></i><span>Facebook</span></a></li>
+                    <li>
+                        <a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank">
+                            <i class="fab fa-whatsapp-square" alt="Whatsapp"></i>
+                            <span>Whatsapp</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.youtube.com/@luisbuenotv">
+                            <i class="fab fa-youtube"></i>
+                            <span>YouTube</span>
+                        </a>
+                    </li>
+                    <li><a target="_blank" href="https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
+                    <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <div id="player"></div>
+        <script>
+            $("#player").lunaradio({
+                userinterface: "big",
+                backgroundcolor: "rgba(9,15,25,0.8)",
+                fontcolor: "#ffffff",
+                hightlightcolor: "#000000",
+                fontname: "Saira Condensed",
+                googlefont: "Saira+Condensed:wght@100",
+                fontratio: "0.4",
+                radioname: "La Radio Que Activa Tu Corazón",
+                scroll: "true",
+                coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
+                title: "GENAP",
+                stream: "http://188.166.167.213:8000/radio.mp3",
+                vol: 50,
+                mute: "true",
+            });
+        </script>
 
-            </ul>
-        </nav>
-    </header>
+        <div class="background_hora">
+            <div id="relogio"></div>
+        </div>
 
-    <div id="player"></div>
+        <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
+    </div>
+
     <script>
-        $("#player").lunaradio({
-            userinterface: "big",
-            backgroundcolor: "rgba(9,15,25,0.8)",
-            fontcolor: "#ffffff",
-            hightlightcolor: "#000000",
-            fontname: "Saira Condensed",
-            googlefont: "Saira+Condensed:wght@100",
-            fontratio: "0.4",
-            radioname: "La Radio Que Activa Tu Corazón",
-            scroll: "true",
-            coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
-            onlycoverimage: "false",
-            coverstyle: "animated",
-            usevisualizer: "real",
-            visualizertype: "2",
-            itunestoken: "",
-            metadatatechnic: "fallback",
-            corsproxy: "",
-            usestreamcorsproxy: "false",
-            streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
-            streamtype: "zeno",
-            idzeno: "",
-            icecastmountpoint: "",
-            shoutcastpath: "",
-            shoutcastid: "1",
-            metadatainterval: "26000",
-            volume: "100",
-            debug: "false",
-            autoplay: "true",
-            displayliveicon: "true",
-            visualizeropacity: "1.0",
-            multicolorvisualizer: "true",
-            color1: "#00FF00",
-            color2: "#ffff00",
-            color3: "#FF1F6F",
-            color4: "#FF1F6F",
+        // Script para el botón de volver arriba
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 100) {
+                $('.back-to-top').fadeIn();
+            } else {
+                $('.back-to-top').fadeOut();
+            }
+        });
+
+        $('.back-to-top').click(function () {
+            $('html, body').animate({ scrollTop: 0 }, 300);
+            return false;
         });
     </script>
-
-    <div class="background_hora">
-        <div id="relogio">15:00:05</div>
-    </div>
-    <script>
-        function reloj() {
-            let elementoID = document.getElementById('relogio');
-            let horalocal = new Date().toLocaleTimeString('es');
-            elementoID.innerHTML = horalocal;
-        }
-        setInterval(reloj, 1000);
-    </script>
-</div>
-
-<footer style="display:grid;align-content:end">
-    <div style="background-color:#222;color:#fff;text-align:center;padding:10px"> 
-        &copy; Copyright 2024 - <a href="http://www.google.com">LuBuDesign +522361079311</a> 
-    </div>
-</footer>
-
-<script>
-    $(".mobile-nav-toggle").click(function(){
-        $("body").toggleClass("mobile-nav-active");
-        $(".mobile-nav-toggle i").toggleClass("fa-bars fa-times");
-    });
-</script>
 </body>
 </html>
