--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             fontname: "Saira Condensed",
             googlefont: "Saira+Condensed:wght@100",
             fontratio: "0.4",
-            radioname: "La Radio Que Activa Tu Corazón",
+            radioname: "Live Music",
             scroll: "false",
             coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
             onlycoverimage: "false",
