--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             metadatatechnic: "fallback",
             corsproxy: "",
             usestreamcorsproxy: "false",
-            streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
+            streamurl: "///////",
             streamtype: "zeno",
             idzeno: "",
             icecastmountpoint: "",
