--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <!-- Añadir el favicon -->
     <link rel="icon" href="https://i.ibb.co/T414C4v/Logo-Gen-Ap.png" type="image/x-icon">
-
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -23,12 +22,12 @@
             color: #272829;
         }
 
-      /* Estilos para la imagen del cover */
-#player .cover-image {
-    width: 150px; /* Cambia el tamaño según lo desees */
-    height: 150px; /* Cambia el tamaño según lo desees */
-    box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3); /* Sombra reducida */
-}
+        /* Estilos para la imagen del cover */
+        #player .cover-image {
+            width: 150px; /* Cambia el tamaño según lo desees */
+            height: 150px; /* Cambia el tamaño según lo desees */
+            box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3); /* Sombra reducida */
+        }
     </style>
 </head>
 
@@ -38,125 +37,121 @@
     <header id="header">
         <nav class="nav-menu">
             <ul>
-                <li><a target="_blank" href=" https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
-                
-                    </a>
-                </li>
+                <li><a target="_blank" href="https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
                 <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square" alt="Facebook"></i><span>Facebook</span></a></li>
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank">
                         <i class="fab fa-whatsapp-square" alt="Whatsapp"></i>
                         <span>Whatsapp</span>
                     </a>
+                </li>
                 <li>
                     <a target="_blank" href="https://www.youtube.com/@luisbuenotv">
                         <i class="fab fa-youtube"></i>
                         <span>YouTube</span>
                     </a>
                 </li>
-                <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
+                <li><a target="_blank" href="https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
-
-
             </ul>
         </nav>
     </header>
 
     <div id="player"></div>
     <script>
-       $("#player").lunaradio({
-        userinterface: "big",
-        backgroundcolor: "rgba(9,15,25,0.8)",
-        fontcolor: "#ffffff",
-        hightlightcolor: "#000000",
-        fontname: "Saira Condensed",
-        googlefont: "Saira+Condensed:wght@100",
-        fontratio: "0.4",
-        radioname: "Live Music",
-        scroll: "false",
-        coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
-        onlycoverimage: "false",
-        coverstyle: "animated",
-        usevisualizer: "real",
-        visualizertype: "2",
-        itunestoken: "",
-        metadatatechnic: "fallback",
-        corsproxy: "",
-        usestreamcorsproxy: "false",
-        streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
-        streamtype: "zeno",
-        idzeno: "",
-        icecastmountpoint: "",
-        shoutcastpath: "",
-        shoutcastid: "1",
-        metadatainterval: "26000",
-        volume: "100",
-        debug: "false",
-        autoplay: "true",
-        displayliveicon: "true",
-        visualizeropacity: "1.0",
-        multicolorvisualizer: "true",
-        color1: "#00FF00",
-        color2: "#ffff00",
-        color3: "#FF1F6F",
-        color4: "#FF1F6F",
-    });
+        $("#player").lunaradio({
+            userinterface: "big",
+            backgroundcolor: "rgba(9,15,25,0.8)",
+            fontcolor: "#ffffff",
+            highlightcolor: "#000000", // Corregido el error tipográfico
+            fontname: "Saira Condensed",
+            googlefont: "Saira+Condensed:wght@100",
+            fontratio: "0.4",
+            radioname: "Live Music",
+            scroll: "false",
+            coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
+            onlycoverimage: "false",
+            coverstyle: "animated",
+            usevisualizer: "real",
+            visualizertype: "2",
+            itunestoken: "",
+            metadatatechnic: "fallback",
+            corsproxy: "",
+            usestreamcorsproxy: "false",
+            streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
+            streamtype: "zeno",
+            idzeno: "",
+            icecastmountpoint: "",
+            shoutcastpath: "",
+            shoutcastid: "1",
+            metadatainterval: "26000",
+            volume: "100",
+            debug: "false",
+            autoplay: "true",
+            displayliveicon: "true",
+            visualizeropacity: "1.0",
+            multicolorvisualizer: "true",
+            color1: "#00FF00",
+            color2: "#ffff00",
+            color3: "#FF1F6F",
+            color4: "#FF1F6F",
+        });
 
-    class RadioPlayer {
-        constructor(streamUrl) {
-            this.audio = new Audio(streamUrl);
-            this.audio.loop = true; // Reproducir en bucle
-            this.audio.volume = 1.0; // Volumen máximo
-            this.isPlaying = false; // Estado de reproducción
-        }
+        class RadioPlayer {
+            constructor(streamUrl) {
+                this.audio = new Audio(streamUrl);
+                this.audio.loop = true; // Reproducir en bucle
+                this.audio.volume = 1.0; // Volumen máximo
+                this.isPlaying = false; // Estado de reproducción
+            }
 
-        // Método para iniciar la reproducción
-        play() {
-            if (!this.isPlaying) {
-                this.audio.play().then(() => {
-                    this.isPlaying = true;
-                    console.log("Reproduciendo en segundo plano.");
-                }).catch(error => {
-                    console.error("Error al intentar reproducir:", error);
-                });
+            // Método para iniciar la reproducción
+            play() {
+                if (!this.isPlaying) {
+                    this.audio.play().then(() => {
+                        this.isPlaying = true;
+                        console.log("Reproduciendo en segundo plano.");
+                    }).catch(error => {
+                        console.error("Error al intentar reproducir:", error);
+                    });
+                }
+            }
+
+            // Método para detener la reproducción
+            stop() {
+                this.audio.pause();
+                this.audio.currentTime = 0; // Reiniciar al principio
+                this.isPlaying = false;
             }
         }
 
-        // Método para detener la reproducción
-        stop() {
-            this.audio.pause();
-            this.audio.currentTime = 0; // Reiniciar al principio
-            this.isPlaying = false;
-        }
-    }
+        // Crear una instancia del reproductor de radio con la URL de tu stream
+        const myRadio = new RadioPlayer("https://stream.zeno.fm/ajnldia1z5utv"); // URL de tu stream de radio
 
-    // Crear una instancia del reproductor de radio con la URL de tu stream
-    const myRadio = new RadioPlayer("https://stream.zeno.fm/ajnldia1z5utv"); // URL de tu stream de radio
+        // Intentar iniciar la reproducción automáticamente
+        myRadio.play();
 
-    // Intentar iniciar la reproducción automáticamente
-    myRadio.play();
+        // Mantener la reproducción en segundo plano
+        document.addEventListener("visibilitychange", () => {
+            if (document.visibilityState === "visible" && !myRadio.isPlaying) {
+                myRadio.play(); // Reproducir cuando se vuelve visible
+            }
+        });
 
-    // Mantener la reproducción en segundo plano
-    document.addEventListener("visibilitychange", () => {
-        if (document.visibilityState === "visible" && !myRadio.isPlaying) {
-            myRadio.play(); // Reproducir cuando se vuelve visible
-        }
-    });
+        // Agregar eventos para manejar el audio
+        window.addEventListener("blur", () => {
+            if (myRadio.isPlaying) {
+                console.log("La ventana está inactiva. Manteniendo la reproducción.");
+            }
+        });
 
-    // Agregar eventos para manejar el audio
-    window.addEventListener("blur", () => {
-        if (myRadio.isPlaying) {
-            console.log("La ventana está inactiva. Manteniendo la reproducción.");
-        }
-    });
-
-    window.addEventListener("focus", () => {
-        if (!myRadio.isPlaying) {
-            myRadio.play(); // Reproducir al enfocar la ventana
-        }
-    });
-</script>
+        window.addEventListener("focus", () => {
+            if (!myRadio.isPlaying) {
+                myRadio.play(); // Reproducir al enfocar la ventana
+            }
+        });
+    </script>
 
     <div class="background_hora">
         <div id="relogio">15:00:05</div>
