--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <nav class="nav-menu">
             <ul>
                 <li><a target="_blank" href="https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
-                <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square" alt="Facebook"></i><span>Facebook</span></a></li>
+                <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square"></i><span>Facebook</span></a></li>
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank">
-                        <i class="fab fa-whatsapp-square" alt="Whatsapp"></i>
+                        <i class="fab fa-whatsapp-square"></i>
                         <span>Whatsapp</span>
                     </a>
                 </li>
@@ -64,7 +64,7 @@
             userinterface: "big",
             backgroundcolor: "rgba(9,15,25,0.8)",
             fontcolor: "#ffffff",
-            highlightcolor: "#000000", // Corregido el error tipográfico
+            highlightcolor: "#000000",
             fontname: "Saira Condensed",
             googlefont: "Saira+Condensed:wght@100",
             fontratio: "0.4",
@@ -79,7 +79,7 @@
             metadatatechnic: "fallback",
             corsproxy: "",
             usestreamcorsproxy: "false",
-            streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
+            streamurl: "https://stream.zeno.fm/ajnldia1z5utv", // URL de tu stream de radio
             streamtype: "zeno",
             idzeno: "",
             icecastmountpoint: "",
