--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             metadatatechnic: "fallback",
             corsproxy: "",
             usestreamcorsproxy: "false",
-            streamurl: "https://stream.zeno.fm/ajnldia1z5utv", // URL de tu stream de radio
+            streamurl: " URL de tu stream de radio", // URL de tu stream de radio
             streamtype: "zeno",
             idzeno: "",
             icecastmountpoint: "",
