--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
         /* Estilos para la imagen del cover */
         #player .cover-image {
-            width: 150px; /* Cambia el tamaño según lo desees */
-            height: 150px; /* Cambia el tamaño según lo desees */
-            box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3); /* Sombra reducida */
+            width: 150px;
+            height: 150px;
+            box-shadow: 0 1px 51px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -39,19 +39,9 @@
         <nav class="nav-menu">
             <ul>
                 <li><a target="_blank" href="https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
-                <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square" alt="Facebook"></i><span>Facebook</span></a></li>
-                <li>
-                    <a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank">
-                        <i class="fab fa-whatsapp-square" alt="Whatsapp"></i>
-                        <span>Whatsapp</span>
-                    </a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.youtube.com/@luisbuenotv">
-                        <i class="fab fa-youtube"></i>
-                        <span>YouTube</span>
-                    </a>
-                </li>
+                <li><a target="_blank" href="https://www.facebook.com/radiogenapcristiana"><i class="fab fa-facebook-square"></i><span>Facebook</span></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20escucho%20la%20radio" target="_blank"><i class="fab fa-whatsapp-square"></i><span>Whatsapp</span></a></li>
+                <li><a target="_blank" href="https://www.youtube.com/@luisbuenotv"><i class="fab fa-youtube"></i><span>YouTube</span></a></li>
                 <li><a target="_blank" href="https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
@@ -61,7 +51,6 @@
 
     <div id="player"></div>
     <script>
-        // Inicializar el reproductor de radio
         const radio = $("#player").lunaradio({
             userinterface: "big",
             backgroundcolor: "rgba(9,15,25,0.8)",
@@ -77,19 +66,10 @@
             coverstyle: "animated",
             usevisualizer: "real",
             visualizertype: "2",
-            itunestoken: "",
-            metadatatechnic: "fallback",
-            corsproxy: "",
-            usestreamcorsproxy: "false",
             streamurl: "https://stream.zeno.fm/ajnldia1z5utv",
             streamtype: "zeno",
-            idzeno: "",
-            icecastmountpoint: "",
-            shoutcastpath: "",
-            shoutcastid: "1",
             metadatainterval: "26000",
             volume: "100",
-            debug: "false",
             autoplay: "true",
             displayliveicon: "true",
             visualizeropacity: "1.0",
@@ -100,13 +80,11 @@
             color4: "#FF1F6F",
         });
 
-        // Función para continuar la reproducción en segundo plano
         document.addEventListener("visibilitychange", function() {
             if (document.hidden) {
-                // Si la página está oculta, intenta seguir reproduciendo el audio
-                radio.lunaradio('play'); // Asegúrate de que la función 'play' exista en tu plugin
+                radio.lunaradio('play');
             } else {
-                radio.lunaradio('pause'); // Opcional: Pausa si vuelve a ser visible
+                radio.lunaradio('pause');
             }
         });
     </script>
