--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             color: #fff;
             padding: 15px;
             border-radius: 5px;
-            display: none;
+            display: none; /* Oculta inicialmente */
             z-index: 1000;
         }
     </style>
