--- a/index.html
+++ b/index.html
@@ -109,6 +109,34 @@
                 radio.lunaradio('play');
             }
         }, 5000);
+
+        // Mantener la pantalla encendida con Wake Lock
+        let wakeLock = null;
+
+        async function requestWakeLock() {
+            try {
+                wakeLock = await navigator.wakeLock.request('screen');
+                wakeLock.addEventListener('release', () => {
+                    console.log('Wake lock released!');
+                });
+                console.log('Wake lock acquired!');
+            } catch (err) {
+                console.error('Failed to acquire wake lock', err);
+            }
+        }
+
+        document.addEventListener('visibilitychange', () => {
+            if (document.visibilityState === 'visible') {
+                requestWakeLock();
+            } else {
+                if (wakeLock !== null) {
+                    wakeLock.release();
+                }
+            }
+        });
+
+        // Llamar a la función para asegurarse de que se solicita el wake lock al cargar la página
+        requestWakeLock();
     </script>
 
     <div class="background_hora">
