--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header id="header">
         <nav class="nav-menu">
             <ul>
-                <li><a target="_blank" href=" https://play.google.com/store/apps/details?id=radiogenap.cristiana"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
+                <li><a target="_blank" href=" https://play.google.com/store/apps/details?id=radio.genap.app"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
                 
                     </a>
                 </li>
