--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             autoplay: "true",
             displayliveicon: "true",
             visualizeropacity: "1.0",
-            multicolorvisualizer: "true",
+            multicolorvisualizer: "false",
             color1: "#00FF00",
             color2: "#ffff00",
             color3: "#FF1F6F",
