--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
             onlycoverimage: "false",
             coverstyle: "animated",
-            usevisualizer: "real",
+            usevisualizer: "false",
             visualizertype: "2",
             itunestoken: "",
             metadatatechnic: "fallback",
