--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             coverimage: "https://i.ibb.co/T414C4v/Logo-Gen-Ap.png",
             onlycoverimage: "false",
             coverstyle: "animated",
-            usevisualizer: "false",
+            usevisualizer: "real", /// aqui si quiero que no se vea la onda ay que cambiar por "false" ///
             visualizertype: "2",
             itunestoken: "",
             metadatatechnic: "fallback",
@@ -96,7 +96,7 @@
             autoplay: "true",
             displayliveicon: "true",
             visualizeropacity: "1.0",
-            multicolorvisualizer: "false",
+            multicolorvisualizer: "true", ///// si no quiero que se  vea las ondas de colores ponfo (false) ///
             color1: "#00FF00",
             color2: "#ffff00",
             color3: "#FF1F6F",
