--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header id="header">
         <nav class="nav-menu">
             <ul>
-                <li><a target="_blank" href=" https://play.google.com/store/apps/details?id=radio.genap.app"><i class="fab fa-google-play"></i> <span>Descarga nuestra APP</span></a></li>
+                
                 
                     </a>
                 </li>
@@ -57,7 +57,11 @@
                 <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
-
+                <li>
+  <a href="https://lafevivaradiord.github.io/politicas.html" target="_blank">
+    <i class="fas fa-copyright"></i><span>Política de Privacidad</span>
+  </a>
+</li>
 
             </ul>
         </nav>
