--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                 <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
-                <li>
-  <a href="https://lafevivaradiord.github.io/politicas.html" target="_blank">
-    <i class="fas fa-copyright"></i><span>Política de Privacidad</span>
-  </a>
+                <li><a href="https://lafevivaradiord.github.io/genap.github.io/politicasgenap.html" target="_blank"><i class="fas fa-copyright"></i><span>Política de Privacidad</span></a>
 </li>
 
             </ul>
