--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
                     </a>
                 </li>
                 <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
-                <li><a target="_blank" href="https://www.instagram.com/radiogenapcristiana"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
+                <li>
+    <a target="_blank" href="https://vaughn.live/radiogenap">
+        <i class="fas fa-tv"></i> <!-- Icono de TV, puedes cambiarlo por otro si lo prefieres -->
+        <span>TV En Vivo</span>
+    </a>
+</li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
                 <li><a href="https://lafevivaradiord.github.io/genap.github.io/politicasgenap.html" target="_blank"><i class="fas fa-copyright"></i><span>Política de Privacidad</span></a>
 </li>
