--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
     </a>
 </li>
                 <li><a target="_blank" href="https://www.paypal.me/cantanteluisbueno"><i class="fab fa-paypal"></i><span>PayPal</span></a></li>
-                <li>
-    <a target="_blank" href="https://lafevivaradiord.github.io/reproductormp3.github.io/">
-        <i class="fas fa-music" alt="Reproductor MP3"></i>
+<li>
+    <a target="_blank" rel="noopener noreferrer" href="https://lafevivaradiord.github.io/reproductormp3.github.io/">
+        <i class="fas fa-music"></i>
         <span>Reproductor MP3</span>
     </a>
 </li>
+
 
                 <li><a href="https://lafevivaradiord.github.io/genap.github.io/politicasgenap.html" target="_blank"><i class="fas fa-copyright"></i><span>Política de Privacidad</span></a>
 </li>
