--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li><a target="_blank" href=" https://www.tiktok.com/@radiogenapcristiana"><i class="fab fa-tiktok"></i><span>TikTok</span></a></li>
-                <a href="https://lafevivaradiord.github.io/politicas.html" target="_blank">Política de Privacidad</a>
+                <a href="https://lafevivaradiord.github.io/genap.github.io/politicas.html" target="_blank">Política de Privacidad</a>
             </ul>
         </nav>
     </header>
