--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <p><b>© Todos Los Derechos Reservados Por</b> LuBuDesign 2025</p>
 <div class="social">
 <ul>
-<li><a href="https://www.facebook.com" target="facebook" rel="nofollow"><img src="img/facebook.svg"></a></li>
-<li><a href="https://www.youtube.com" target="youtube" rel="nofollow"><img src="img/youtube.svg"></a></li>
-<li><a href="https://www.instagram.com" target="instagram" rel="nofollow"><img src="img/instagram.svg"></a></li>
-<li><a href="https://www.x.com" target="X" rel="nofollow"><img src="img/x.svg"></a></li>
-<li><a href="https://wa.me" target="whatsapp" rel="nofollow"><img src="img/whatsapp.svg"></a></li>
+<li><a href="https://www.facebook.com/radiogenapcristiana" target="facebook" rel="nofollow"><img src="img/facebook.svg"></a></li>
+<li><a href="https://www.youtube.com/luisbuenotv" target="youtube" rel="nofollow"><img src="img/youtube.svg"></a></li>
+<li><a href="https://www.instagram.com/radiogenapcristiana" target="instagram" rel="nofollow"><img src="img/instagram.svg"></a></li>
+<li><a href="https://www.x.com/radiogenap" target="X" rel="nofollow"><img src="img/x.svg"></a></li>
+<li><a href="https://api.whatsapp.com/send?phone=522361079311&text=Hola%20quiero%20más%20información" target="whatsapp" rel="nofollow"><img src="img/whatsapp.svg"></a></li>
 </ul>
 </div>
 </div>
