--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <!-- Service Worker registration for PWA install -->
   <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/genap.github.io/sw.js')
+    navigator.serviceWorker.register('/sw.js')
       .then(reg => console.log('SW registrado:', reg))
       .catch(err => console.error('SW fallo:', err));
     }
