--- a/index.html
+++ b/index.html
@@ -66,16 +66,20 @@
     <input type="range" id="volumeSlider" min="0" max="1" step="0.01" class="w-full accent-[#FFA447]">
   </div>
 
-  <!-- Botón de reproducción redondo -->
-  <button id="playBtn" class="w-16 h-16 bg-pink-600 hover:bg-pink-700 text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all">
+  <!-- Botón de reproducción -->
+  <button id="playBtn" class="w-16 h-16 bg-[#FFA447] hover:bg-[#FFA447] text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all">
     <i class="fas fa-play"></i>
   </button>
 
-  <!-- Audio (radio online) -->
+  <!-- Audio -->
   <audio id="audio" src="https://stream.zeno.fm/ajnldia1z5utv"></audio>
 
+  <!-- Ticker de noticias -->
+  <div class="absolute bottom-0 w-full bg-gray-800 overflow-hidden">
+    <div id="newsContent" class="whitespace-nowrap animate-marquee py-2 px-4 text-sm text-yellow-400 flex gap-x-6"></div>
+  </div>
+
   <script>
-    // Menú lateral deslizante
     const menuBtn = document.getElementById('menuBtn');
     const menuPanel = document.getElementById('menuPanel');
     menuBtn.addEventListener('click', () => {
@@ -83,23 +87,20 @@
       menuPanel.classList.toggle('translate-x-0');
     });
 
-    // Variables de audio y control
     const playBtn = document.getElementById('playBtn');
     const audio = document.getElementById('audio');
     const volumeSlider = document.getElementById('volumeSlider');
     let isPlaying = false;
 
-    // Cargar volumen guardado
     const savedVolume = localStorage.getItem('radioVolume');
     if (savedVolume !== null) {
       audio.volume = parseFloat(savedVolume);
       volumeSlider.value = savedVolume;
     }
 
-    // Control de Play/Stop sin rebobinar
     playBtn.addEventListener('click', () => {
       if (!isPlaying) {
-        audio.load();       // recarga el stream en vivo
+        audio.load();
         audio.play();
         playBtn.innerHTML = '<i class="fas fa-stop"></i>';
       } else {
@@ -109,13 +110,11 @@
       isPlaying = !isPlaying;
     });
 
-    // Control de volumen
     volumeSlider.addEventListener('input', () => {
       audio.volume = volumeSlider.value;
       localStorage.setItem('radioVolume', volumeSlider.value);
     });
 
-    // Compartir en redes sociales
     const shareBtn = document.getElementById('shareBtn');
     shareBtn.addEventListener('click', () => {
       if (navigator.share) {
@@ -129,7 +128,6 @@
       }
     });
 
-    // PWA install prompt
     let deferredPrompt;
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
@@ -147,9 +145,48 @@
         deferredPrompt = null;
       });
     });
+
+    async function fetchRSS() {
+      const rssUrls = [
+        'https://www.meganoticias.mx/tehuacan/rss',
+        'https://www.excelsior.com.mx/rss.xml',
+        'https://www.reforma.com/rss/portada.xml'
+      ];
+      const newsContent = document.getElementById('newsContent');
+      async function loadNewsFromUrl(url) {
+        try {
+          const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(url)}`);
+          const data = await response.json();
+          if (data.items && data.items.length > 0) {
+            newsContent.innerHTML = data.items.map(item => `<span class="mx-6">${item.title}</span>`).join(' ');
+          }
+        } catch (error) {
+          console.error('Error al cargar las noticias:', error);
+        }
+      }
+      while (true) {
+        for (const url of rssUrls) {
+          await loadNewsFromUrl(url);
+        }
+        await new Promise(resolve => setTimeout(resolve, 120000));
+      }
+    }
+
+    fetchRSS();
+
+    const style = document.createElement('style');
+    style.innerHTML = `
+      @keyframes marquee {
+        0% { transform: translateX(100%); }
+        100% { transform: translateX(-100%); }
+      }
+      .animate-marquee {
+        animation: marquee 140s linear infinite;
+      }
+    `;
+    document.head.appendChild(style);
   </script>
 
-  <!-- Service Worker registration for PWA install -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/genap.github.io/sw.js')
